--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-Obody {
+body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
@@ -7,7 +7,7 @@ Obody {
 }
 
 header {
-    background: #333;
+    background-color: #333;
     color: #fff;
     padding: 1rem 0;
     text-align: center;
@@ -35,6 +35,6 @@ main {
 footer {
     text-align: center;
     padding: 20px 0;
-    background: #333;
+    background-color: #333;
     color: #fff;
 }
