--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@ body {
     background-color: #696969;
 }
 
-img {
-    height: 200px;
+.image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
     width: 30%;
-
 }
 
 header {
