--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     width: 30%;
 }
 
+h2 {
+    text-align: center;
+}
+
 header {
     background-color: #333;
     color: #fff;
@@ -45,4 +49,5 @@ footer {
     padding: 20px 0;
     background-color: #333;
     color: #fff;
+    bottom: 0;
 }
