--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .image {
-    display: block;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
     height: 300px;
