--- a/style.css
+++ b/style.css
@@ -44,10 +44,16 @@ main {
     padding: 20px;
 }
 
+section {
+    padding-right: 200px;
+    padding-left: 200px;
+}
+
 footer {
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
     background-color: #333;
     color: #fff;
+    width: 100%;
     bottom: 0;
 }
